Adding the date field

--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -16,13 +16,14 @@
     <%= f.input :name %>
   </div>
 
-<%#- What is below is the new addition %>
+<%#- What is below is what will be shown when the nested form is called %>
  <table class='table'>
   <thead>
      <tr>
        <th></th>
        <th>Task Name</th>
        <th>Completed</th>
+       <th>Due</th>
      </tr>
   </thead>
   <tbody class='tasks'>
