--- a/app/views/todo_lists/_task_fields.html.erb
+++ b/app/views/todo_lists/_task_fields.html.erb
@@ -4,5 +4,5 @@
 	</td>
 	<td><%= f.input :name, label: false %></td>
 	<td><%= f.input :completed, label: false %></td>
-	<td><%#= f.input :due, label: false, as: :string %></td>
+	<td><%= f.input :due, label: false, as: :string %></td>
 </tr>
